# bazel-tutorial-scala

01_scala_tutorial/: WORKSPACE
01_scala_tutorial/src/main/scala/cmd/: Runner.scala
01_scala_tutorial/src/main/scala/lib/: BUILD  Greeting.scala
02_scala_maven/: BUILD.bazel  WORKSPACE
02_scala_maven/src/main/scala/example/: App.scala  BUILD
